--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.21.0",
     "mongoose": "^7.1.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.0"
