--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.21.0",
     "mongoose": "^7.1.0",
     "rxjs": "^7.8.1",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "uuid": "^9.0.0"
   }
 }
