--- a/Task-Manager/package.json
+++ b/Task-Manager/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@angular/animations": "^15.2.0",
     "@angular/cdk": "^15.2.8",
+    "@angular/cli": "~15.2.7",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
