--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
       {
         "source": "/(.*)",
         "destination": "backend/server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/task-manager/dist/$1"
       }
     ]
   }
